--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,115 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Angular</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AngularProjet</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta charset="UTF-8" />
+
+    <meta name="author" content="D-THEMES" />
+
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/images/icons/favicon.png"
+    />
+
+    <!-- WebFont.js -->
+    <script>
+      WebFontConfig = {
+        google: {
+          families: [
+            "Poppins:400,500,600,700,800",
+            "Seoge Script:400,500,600,700,800",
+          ],
+        },
+      };
+      (function (d) {
+        var wf = d.createElement("script"),
+          s = d.scripts[0];
+        wf.src = "./assets/js/webfont.js";
+        wf.async = true;
+        s.parentNode.insertBefore(wf, s);
+      })(document);
+    </script>
+
+    <link
+      rel="preload"
+      href="./assets/vendor/fontawesome-free/webfonts/fa-regular-400.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="./assets/vendor/fontawesome-free/webfonts/fa-solid-900.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="./assets/vendor/fontawesome-free/webfonts/fa-brands-400.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="./assets/fonts/wolmart87d5.ttf?png09e"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+
+    <!-- Vendor CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/vendor/fontawesome-free/css/all.min.css"
+    />
+
+    <!-- Plugins CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/vendor/swiper/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/vendor/animate/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/vendor/magnific-popup/magnific-popup.min.css"
+    />
+
+    <!-- Default CSS -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/demo15.min.css" />
+  </head>
+  <body>
+    <app-root></app-root>
+
+    <!-- End of Quick view -->
+
+    <!-- Plugin JS File -->
+    <script src="./assets/vendor/jquery/jquery.min.js"></script>
+    <script src="./assets/vendor/parallax/parallax.min.js"></script>
+    <script src="./assets/vendor/jquery.plugin/jquery.plugin.min.js"></script>
+    <script src="./assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="./assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="./assets/vendor/isotope/isotope.pkgd.min.js"></script>
+    <script src="./assets/vendor/skrollr/skrollr.min.js"></script>
+    <script src="./assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="./assets/vendor/zoom/jquery.zoom.js"></script>
+    <script src="./assets/vendor/jquery.countdown/jquery.countdown.min.js"></script>
+
+    <!-- Main JS -->
+    <script src="./assets/js/main.min.js"></script>
+  </body>
 </html>
